# pyTecnoalarmTCS

./: .gitignore  README.md  pyproject.toml  setup_venv.sh  test_with_credentials.py
pytecnoalarm_tcs/: __init__.py  auth.py  central.py  client.py  constants.py  exceptions.py  persistence.py  session.py
